add job run api doc

--- a/dashboard/templates/releases/_release_map_view.html
+++ b/dashboard/templates/releases/_release_map_view.html
@@ -2,6 +2,7 @@
 <h2>Product Release Readiness <small class="text-muted" {% if latest_release %} data-toggle="tooltip" title="{{ latest_release.1 }}" {% endif %}>
     Based on statistics retrieved from the latest built packages.</small></h2>
 <div id="map-container" class="map-container"></div>
+<span class="lead text-muted pull-right">Click a territory to know more.</span>
 
 <script src="/static/d3/d3.min.js"></script>
 <script src="/static/topojson/build/topojson.min.js"></script>
