--- a/dashboard/templates/summary.html
+++ b/dashboard/templates/summary.html
@@ -71,7 +71,7 @@
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
           <span class="fa fa-user"></span>
-          <span class="card-pf-aggregate-status-count">Language</span> Maintainer
+          <span class="card-pf-aggregate-status-count">Language</span> Trends across releases
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
@@ -88,7 +88,7 @@
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
           <span class="fa fa-user"></span>
-          <span class="card-pf-aggregate-status-count">Package</span> Maintainer
+          <span class="card-pf-aggregate-status-count">Package</span> Translation Status
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
