--- a/dashboard/templates/languages/language_list.html
+++ b/dashboard/templates/languages/language_list.html
@@ -117,7 +117,7 @@
       <div class="col-sm-12">
         <form class="toolbar-pf-actions">
           <div class="form-group toolbar-pf-filter">
-            <label class="sr-only" for="filter-languages-table">Package</label>
+            <label class="sr-only" for="filter-languages-table">Language</label>
             <div class="input-group">
               <div class="input-group-btn">
                 <button type="button" class="btn btn-default dropdown-toggle" id="filter-languages-table" data-toggle="dropdown" aria-haspopup="true"
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="col-sm-3 table-view-pf-select-results">
-            <strong>{{ locales|length }}</strong> languages
+            <strong>{{ locales|length }}</strong> languages. <span class="text-info">Click one to view details.</span>
           </div>
         </div>
       </div>
