--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -184,9 +184,6 @@
             <li class="list-group-item" id="li-jobs-jobs" data-toggle="tooltip" title="Predefined Jobs">
               <a href="{% url 'jobs' %}"><span class="list-group-item-value">Predefined Jobs</span></a>
             </li>
-            <li class="list-group-item" id="li-jobs-cleanup" data-toggle="tooltip" title="Cleanup Jobs">
-              <a href="{% url 'jobs-cleanup' %}"><span class="list-group-item-value">Clean Up Jobs</span></a>
-            </li>
             {% endif %}
             <li class="list-group-item" id="li-jobs-yml-based" data-toggle="tooltip" title="YML based Jobs">
               <a href="{% url 'jobs-yml-based' %}">
@@ -198,6 +195,11 @@
             <span class="list-group-item-value">Inspect Logs</span>
               </a>
             </li>
+            {% if user.is_authenticated %}
+            <li class="list-group-item" id="li-jobs-cleanup" data-toggle="tooltip" title="Cleanup Jobs">
+              <a href="{% url 'jobs-cleanup' %}"><span class="list-group-item-value">Clean Up</span></a>
+            </li>
+            {% endif %}
             <li class="list-group-item" id="li-jobs-archive" data-toggle="tooltip" title="Archive">
               <a href="{% url 'jobs-archive' %}">
             <span class="list-group-item-value">Archive</span>
