--- a/dashboard/templates/jobs/jobs_cleanup.html
+++ b/dashboard/templates/jobs/jobs_cleanup.html
@@ -1,4 +1,4 @@
-{% extends "jobs/jobs_base.html" %}
+{% extends "base.html" %}
 {% load custom_tags %}
 
 {% block pagecontent %}
@@ -6,7 +6,7 @@
   <div class="col-xs-12">
     <div class="card-pf card-pf-utilization" id="card-packages-summary" style="min-height: 750px;">
       <div class="card-pf-heading">
-        <h2 class="card-pf-title">Cleanup Jobs</h2>
+        <h2 class="card-pf-title">Clean Up</h2>
       </div>
       <div class="card-pf-body">
 
@@ -32,8 +32,8 @@
                     </div>
                     {% endfor %}
                 </div>
-                <button type="submit" data-loading-text="Disabling..." class="btn btn-default pull-right">
-                    <span class="pficon pficon-warning-triangle-o"></span> Toggle Visibility</button>
+                <button type="submit" data-loading-text="Disabling..." class="btn btn-warning pull-right">
+                    Toggle Visibility</button>
             </form>
           </div>
         </div>
