--- a/dashboard/templates/geolocation/_territory_summary.html
+++ b/dashboard/templates/geolocation/_territory_summary.html
@@ -5,7 +5,7 @@
     {% if territory_stats %}
       <div class="row row-cards-pf">
         {% for locale, data in territory_stats.items %}
-        <div class="col-xs-12 col-sm-4 col-md-4">
+        <div class="col-xs-12 col-sm-3">
           <div class="card-pf card-pf-utilization card-pf-accented">
             <h3 class="card-pf-title">
               <a href="{% url 'language-view' locale %}" style="text-decoration: none !important">
