--- a/dashboard/templates/geolocation/territory_view.html
+++ b/dashboard/templates/geolocation/territory_view.html
@@ -8,7 +8,10 @@
 {% block pagecontent %}
 <div class="panel panel-default">
   <div class="panel-heading">
-      <span class="card-pf-title">Territory View</span>
+      <span class="card-pf-title">
+          {{ country_name }} <small>{{ country_code }}
+          {% if two_char_country_code %}| {{ two_char_country_code }}{% endif %}</small>
+      </span>
       <span class="pull-right">
         <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
         <a id="refresh-location-summary" class="btn btn-default btn-small" data-toggle="tooltip" title="Refresh">
@@ -17,32 +20,110 @@
       </span>
   </div>
   <div class="panel-body">
-      <h1>{{ country_name }} <small>{{ country_code }}
-          {% if two_char_country_code %}| {{ two_char_country_code }}{% endif %}</small>
-          <small class="pull-right text-muted">
-            {% if territory_locales %}<span class="text-info">{{ territory_locales|length }}</span> Locale(s){% endif %}
-          </small>
-      </h1><hr/>
       <div class="row container-fluid row-eq-height">
-
-          <div id="div-territory-summary" class="col-xs-12 col-md-10">
-              {% tag_location_summary country_code %}
+          <div id="div-territory-locales" class="col-xs-12 col-md-4">
+              <div class="card-pf">
+                  <div class="card-pf-heading">
+                    <h2 class="card-pf-title">
+                      Languages
+                      {% if territory_locales %}
+                        <span class="pull-right badge">{{ territory_locales|length }}</span>
+                      {% endif %}
+                    </h2>
+                  </div>
+                  <div class="card-pf-body territory-cards-body">
+                    <div class="territory-cards">
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                                <tr><td>Locale</td><td>Language</td></tr>
+                            </thead>
+                            <tbody>
+                                {% for locale, language in territory_locales.items %}
+                                  <tr>
+                                      <td><span class="text-info">{{ locale }}</span></td>
+                                      <td>{{ language }}</td>
+                                  </tr>
+                                {% empty %}
+                                  <tr>
+                                      <td colspan="2">No locales found.</td>
+                                  <tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                  </div>
+              </div>
           </div>
-
-          <div id="div-territory-locales" class="col-xs-12 col-md-2">
-            <div>
-                <ul class="list-group">
-                    {% for locale in territory_locales %}
-                      <li class="list-group-item">
-                          <h5 class="text-info">{{ locale }}</h5>
-                      </li>
-                    {% empty %}
-                      <li class="list-group-item">
-                          <h5 class="text-info">No locales found.</h5>
-                      </li>
-                    {% endfor %}
-                </ul>
-            </div>
+          <div id="div-territory-keyboards" class="col-xs-12 col-md-4">
+              <div class="card-pf">
+                  <div class="card-pf-heading">
+                    <h2 class="card-pf-title">
+                      Keyboards
+                      {% if territory_keyboards %}
+                        <span class="pull-right badge">{{ territory_keyboards|length }}</span>
+                      {% endif %}
+                    </h2>
+                  </div>
+                  <div class="card-pf-body territory-cards-body">
+                    <div class="row">
+                        {% if territory_keyboards %}
+                        <div class="col-sm-{% if territory_input_methods %}6{% else %}12{% endif %}">
+                            <h5>Layouts</h5>
+                          <ul class="list-group territory-cards-keyboard">
+                          {% for keyboard in territory_keyboards %}
+                              <li class="list-group-item">
+                                  <i class="fa fa-keyboard-o" aria-hidden="true"></i>
+                                  <span class="text-info">{{ keyboard }}</span>
+                              </li>
+                          {% endfor %}
+                          </ul>
+                        </div>
+                        {% else %}
+                            <span style="padding:5%">Not found.</span>
+                        {% endif %}
+                        {% if territory_input_methods %}
+                        <div class="col-sm-6">
+                            <h5>Input Methods</h5>
+                          <ul class="list-group territory-cards-keyboard">
+                          {% for input_method in territory_input_methods %}
+                            <li class="list-group-item">{{ input_method }}</li>
+                          {% endfor %}
+                          </ul>
+                        </div>
+                        {% endif %}
+                    </div>
+                  </div>
+              </div>
+          </div>
+          <div id="div-territory-timezones" class="col-xs-12 col-md-4">
+              <div class="card-pf">
+                  <div class="card-pf-heading">
+                    <h2 class="card-pf-title">
+                      Time Zones
+                      {% if territory_timezones %}
+                        <span class="pull-right badge">{{ territory_timezones|length }}</span>
+                      {% endif %}
+                    </h2>
+                  </div>
+                  <div class="card-pf-body territory-cards-body">
+                    <ul class="list-group territory-cards">
+                        {% for timezone in territory_timezones %}
+                            <li class="list-group-item">
+                                {{ timezone }}
+                                <span class="pull-right"> <span class="fa fa-clock-o"></span>
+                                    <mark>{{ timezone|tz_date }}</mark></span>
+                            </li>
+                        {% empty %}
+                            <li class="list-group-item">Not found.</li>
+                        {% endfor %}
+                    </ul>
+                  </div>
+              </div>
+          </div>
+      </div><hr/>
+      <div class="row container-fluid row-eq-height">
+          <div id="div-territory-summary" class="col-xs-12 col-md-12">
+              {% tag_location_summary country_code %}
           </div>
       </div>
   </div>
