--- a/dashboard/templates/releases/_outofsync_packages.html
+++ b/dashboard/templates/releases/_outofsync_packages.html
@@ -3,7 +3,7 @@
 <script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 
 <h2>Out of Sync <br/><small class="text-muted">
-    Statistics differ for messages translated in platform versus packaged.</small></h2>
+    Statistics differ for messages translated in platform versus packaged, built.</small></h2>
 
 
 <div>
