some landing page UI changes

--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -15,10 +15,12 @@
 {% block pagecontent %}
 <div class="row row-cards-pf">
   <div class="col-xs-12">
-    <div class="card-pf card-pf-utilization" id="card-packages-summary">
+    <div class="card-pf" id="card-packages-summary">
+      <div class="card-pf-heading">
+        <h1 class="card-pf-title">Quick Start</h1>
+      </div>
       <div class="card-pf-body">
         <div style="padding-left:100px">
-            <h1>Quick Start</h1>
             <div class="content-section-a">
                 <div class="container">
                     <div class="row">
