--- a/dashboard/templates/summary.html
+++ b/dashboard/templates/summary.html
@@ -1,100 +1,72 @@
 <div class="row row-cards-pf" id="row-status-cards">
-  <div class="col-xs-12 col-sm-6 col-md-2">
+  <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
-        <a href="{% url 'settings-languages' %}">
-          <span class="fa fa-language"></span>
-          <span class="card-pf-aggregate-status-count">{{ locales_len }}</span> Languages
-      </a>
-      </h2>
-      <div class="card-pf-body">
-        <p class="card-pf-aggregate-status-notifications">
-          <span class="card-pf-aggregate-status-notification">
-            <span class="pficon pficon-ok"></span>
-          </span>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-2">
-    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
-      <h2 class="card-pf-title">
-        <a href="{% url 'settings-packages' %}">
-          <span class="pficon pficon-bundle"></span>
-          <span class="card-pf-aggregate-status-count">{{ packages_len }}</span> Packages
-        </a>
-      </h2>
-      <div class="card-pf-body">
-        <p class="card-pf-aggregate-status-notifications">
-          <span class="card-pf-aggregate-status-notification">
-            <span class="pficon pficon-ok"></span>
-          </span>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-2">
-    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
-      <h2 class="card-pf-title">
-        <a href="{% url 'settings-trans-platforms' %}">
-          <span class="fa fa-server"></span>
-          <span class="card-pf-aggregate-status-count">{{ platforms_len }}</span> Translation Platforms
-        </a>
-      </h2>
-      <div class="card-pf-body">
-        <p class="card-pf-aggregate-status-notifications">
-          <span class="card-pf-aggregate-status-notification">
-            <span class="pficon pficon-ok"></span>
-          </span>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-2">
-    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
-      <h2 class="card-pf-title">
-        <a href="{% url 'jobs-yml-based' %}">
-          <span class="fa fa-bolt"></span>
-          <span class="card-pf-aggregate-status-count">{{ jobs_len }}</span> Jobs
-        </a>
-      </h2>
-      <div class="card-pf-body">
-        <p class="card-pf-aggregate-status-notifications">
-          <span class="card-pf-aggregate-status-notification">
-            <span class="pficon pficon-ok"></span>
-          </span>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-2">
-    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
-      <h2 class="card-pf-title">
-          <span class="fa fa-user"></span>
-          <span class="card-pf-aggregate-status-count">Language</span> Trends across releases
+        <span class="fa fa-language"></span>
+        <span class="card-pf-aggregate-status-count">{{ locales_len }} <small>Languages</small></span>
+        <span class="text-info">Trends across releases</span>
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
           <a href="{% url 'settings-languages' %}">
             <span class="card-pf-aggregate-status-notification">
-              <span class="fa fa-angle-double-right"></span>
+              <span class="fa fa-angle-double-right text-primary"></span>
             </span>
           </a>
         </p>
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-6 col-md-2">
+  <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
-          <span class="fa fa-user"></span>
-          <span class="card-pf-aggregate-status-count">Package</span> Translation Status
+        <span class="pficon pficon-bundle"></span>
+        <span class="card-pf-aggregate-status-count">{{ packages_len }} <small>Packages</small></span>
+        <span class="text-info">Translation Completeness</span>
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
           <a href="{% url 'settings-packages' %}">
             <span class="card-pf-aggregate-status-notification">
-              <span class="fa fa-angle-double-right"></span>
+              <span class="fa fa-angle-double-right text-primary"></span>
+            </span>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
+      <h2 class="card-pf-title">
+        <span class="fa fa-server"></span>
+        <span class="card-pf-aggregate-status-count">{{ platforms_len }} <small>Platforms</small></span>
+        <span class="text-info">Latest translation statistics</span>
+      </h2>
+      <div class="card-pf-body">
+        <p class="card-pf-aggregate-status-notifications">
+          <a href="{% url 'settings-trans-platforms' %}">
+            <span class="card-pf-aggregate-status-notification">
+              <span class="fa fa-angle-double-right text-primary"></span>
+            </span>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
+      <h2 class="card-pf-title">
+        <a href="{% url 'jobs-logs' %}">
+          <span class="fa fa-bolt"></span>
+          <span class="card-pf-aggregate-status-count">{{ jobs_len }} <small>Jobs</small></span>
+          <span class="text-info">Workflow Automation</span>
+        </a>
+      </h2>
+      <div class="card-pf-body">
+        <p class="card-pf-aggregate-status-notifications">
+          <a href="{% url 'jobs-yml-based' %}">
+            <span class="card-pf-aggregate-status-notification">
+              <span class="fa fa-angle-double-right text-primary"></span>
             </span>
           </a>
         </p>
