--- a/dashboard/templates/packages/package_update.html
+++ b/dashboard/templates/packages/package_update.html
@@ -1,14 +1,23 @@
 {% extends "form_base.html" %}
+{% load custom_tags %}
+
 {% block extrascript %}
 <script src="/static/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
 <script src="/static/bootstrap-select/dist/js/bootstrap-select.js"></script>
 {% endblock %}
+
 {% block formtitle %}
 Update Package
 {% endblock %}
+
 {% block formreturnurl %}
-{% url 'settings-packages' %}
+{% if request.resolver_match.kwargs|get_item:"slug" %}
+    {% url 'package-view' request.resolver_match.kwargs|get_item:"slug" %}
+{% else %}
+    {% url 'settings-packages' %}
+{% endif %}
 {% endblock %}
+
 {% block formscript %}
 <script>
   $(function () {
