minor ui changes in package details page

--- a/dashboard/templates/packages/_branch_mapping.html
+++ b/dashboard/templates/packages/_branch_mapping.html
@@ -36,5 +36,5 @@
   </div>
 </div>
 {% else %}
-<h4 class="text-info">No mapping found. <small>Please check release branch(es) and create branch mapping.</span></h4>
+<h4 class="text-info">No mapping found. <small>Please check release branch(es) and create branch mapping.</small></h4>
 {% endif %}
