--- a/dashboard/templates/packages/_tabular_form.html
+++ b/dashboard/templates/packages/_tabular_form.html
@@ -51,4 +51,6 @@
       </div>
   </div>
 </div>
+{% else %}
+<h4 class="text-info">Details not found. <small>Please try syncing with translation platform.</small></h4>
 {% endif %}
