--- a/dashboard/templates/packages/_stats_diff.html
+++ b/dashboard/templates/packages/_stats_diff.html
@@ -3,9 +3,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h4><strong>Differences</strong> <span class="pull-right text-muted">Translation Platform vs Build System</span></h4>
-    <span class="text-info">Languages in <span class="text-danger">red</span> color have some translations to be pulled from Translation Platform.
-      <i>Whereas,</i> languages in <span class="text-primary">blue</span> could
-      <b>not</b> make 100% in the build system.</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
     <thead>
@@ -13,7 +10,7 @@
         <th>Release</th>
         <th>Languages
           <small>(which are out of sync:
-            <span class="text-danger">need attention</span>)</small>
+            <span class="text-info">need attention</span>)</small>
         </th>
       </tr>
     </thead>
@@ -24,7 +21,7 @@
         <td>
           {% for lang, diff in lang_diff.items %}
             {% if diff == 0 %}
-              <span class="text-primary">{{ lang }}</span>&nbsp;&nbsp;
+              <span class="text-warning">{{ lang }}</span>&nbsp;&nbsp;
             {% elif diff > 0 %}
               <span class="text-danger" data-toggle="tooltip" title="{{ diff }}%">{{ lang }}</span>&nbsp;&nbsp;
             {% endif %}
@@ -36,5 +33,11 @@
       {% endfor %}
     </tbody>
   </table>
+  <div  class="panel-footer">
+    <span class="text-info">Languages in <span class="text-danger">red</span> color have some translations to be pulled from Translation Platform.
+      <i>Whereas,</i> <span class="text-warning">yellow</span> could
+      <b>not</b> make 100% in the build system.
+      <i class="pull-right text-muted">Hover a language for details.</i></span>
+  </div>
 </div>
 {% endif %}
