--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -51,7 +51,7 @@
                     <span class="pull-right">
                         <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip"
                                 data-placement="bottom" data-copy="{{ request.build_absolute_uri }}{{ object.get_absolute_url }}"
-                                title="Copy to clipboard">Copy URL <span class="fa fa-clipboard"></span></button>
+                                title="Copy URL"><span class="fa fa-clipboard"></span></button>
                         <!--<a href="mailto:recipient@transtats.org?subject={{ log.job_type }}{% if log.job_remarks %}: {{ log.job_remarks }}{% endif %}-->
                         <!--&body={{ request.build_absolute_uri }}{{ object.get_absolute_url }}"-->
                            <!--class="btn btn-default btn-copy js-tooltip" type="button" data-toggle="tooltip"-->
