--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -12,66 +12,70 @@
   <div class="col-xs-12">
     <div class="card-pf card-pf-utilization" id="card-packages-summary" style="min-height: 750px;">
       <div class="card-pf-heading">
-        <h2 class="card-pf-title">Predefined Jobs
-        <small>
+        <h1 class="card-pf-title">Predefined Jobs
+        <small class="pull-right">
             {% if jobs_count > 0 and job_last_ran_on %}
                 <span class="text-muted">Last successful job ran on <span class="text-info">{{ job_last_ran_on }}</span>
                     of type <span class="text-info">{{ job_last_ran_type }}</span>.</span>
             {% endif %}
-        </small></h2>
+        </small></h1>
       </div>
       <div class="card-pf-body">
-
-        <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Sync Build Tags
-                  <span id="buildtagswaiting" class="pull-right"></span></h3>
-          </div>
-          <div class="panel-body">
-            This would initiate a syncbuildtags job to update:
-              <span class="text-info" data-toggle="tooltip" title="Build tags are prerequisite to branch mapping and downstream sync.">
-                  tags of build systems for the releases.</span><hr/>
-            <form method="post" id ="syncBuildTagsForm" class="form-horizontal">{% csrf_token %}
-                <input type="hidden" value="syncbuildtags" id="syncBuildTagsIdentifier"/>
-                <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-                    <span class="fa fa-play-circle-o"></span> Trigger Now</button>
-                <span id="syncBuildTagsMsg"></span>
-            </form>
-          </div>
+        <div class="col-xs-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                  <h3 class="panel-title">Sync Build Tags
+                      <span id="buildtagswaiting" class="pull-right"></span></h3>
+              </div>
+              <div class="panel-body">
+                This would initiate a syncbuildtags job to update:
+                  <span class="text-info" data-toggle="tooltip" title="Build tags are prerequisite to branch mapping and downstream sync.">
+                      tags of build systems for the releases.</span><hr/>
+                <form method="post" id ="syncBuildTagsForm" class="form-horizontal">{% csrf_token %}
+                    <input type="hidden" value="syncbuildtags" id="syncBuildTagsIdentifier"/>
+                    <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+                        <span class="fa fa-play-circle-o"></span> Trigger Now</button>
+                    <span id="syncBuildTagsMsg"></span>
+                </form>
+              </div>
+            </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sync Translation Platforms
-                <span id="transplatformwaiting" class="pull-right"></span></h3>
-          </div>
-          <div class="panel-body">
-            This would initiate a synctransplatform job to update:
-              <span class="text-info"> translation platform&apos;s projects and their details in {{ app_name }}.</span><hr/>
-            <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
-                <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
-                <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-                    <span class="fa fa-play-circle-o"></span> Trigger Now</button>
-                <span id="syncTransMsg"></span>
-            </form>
-          </div>
+        <div class="col-xs-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Sync Translation Platforms
+                    <span id="transplatformwaiting" class="pull-right"></span></h3>
+              </div>
+              <div class="panel-body">
+                This would initiate a synctransplatform job to update:
+                  <span class="text-info"> translation platform&apos;s projects and their details.</span><hr/>
+                <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
+                    <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
+                    <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+                        <span class="fa fa-play-circle-o"></span> Trigger Now</button>
+                    <span id="syncTransMsg"></span>
+                </form>
+              </div>
+            </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Sync Release Schedule {{ key }}
-                  <span id="relschedulewaiting" class="pull-right"></span></h3>
-          </div>
-          <div class="panel-body">
-            This would initiate a syncrelschedule job to update:
-              <span class="text-info"> event dates in release schedule.</span><hr/>
-            <form method="post" id ="syncCalendarForm" class="form-horizontal">{% csrf_token %}
-                <input type="hidden" value="syncrelschedule" id="syncCalendarIdentifier"/>
-                <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-                    <span class="fa fa-play-circle-o"></span> Trigger Now</button>
-                <span id="syncCalendarMsg"></span>
-            </form>
-          </div>
+        <div class="col-xs-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                  <h3 class="panel-title">Sync Release Schedule {{ key }}
+                      <span id="relschedulewaiting" class="pull-right"></span></h3>
+              </div>
+              <div class="panel-body">
+                This would initiate a syncrelschedule job to update:
+                  <span class="text-info"> event dates in release schedule.</span><hr/>
+                <form method="post" id ="syncCalendarForm" class="form-horizontal">{% csrf_token %}
+                    <input type="hidden" value="syncrelschedule" id="syncCalendarIdentifier"/>
+                    <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+                        <span class="fa fa-play-circle-o"></span> Trigger Now</button>
+                    <span id="syncCalendarMsg"></span>
+                </form>
+              </div>
+            </div>
         </div>
-
       </div>
     </div>
   </div>
