--- a/dashboard/templates/releases/product_release_list.html
+++ b/dashboard/templates/releases/product_release_list.html
@@ -22,9 +22,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-pf card-pf-utilization card-pf-accented card-releases-ts">
           <h2 class="card-pf-title">
-            <a href="{% url 'trans-status-release' relbranch.release_slug %}" data-toggle="tooltip" title="Stats of {{ relbranch.release_name }}">
-              {{ relbranch.release_name }}
-            </a>
+            {{ relbranch.release_name }}
+            <span class="pull-right">
+              <a href="{% url 'trans-status-release' relbranch.release_slug %}" class="btn btn-default">Stats</a>
+            </span>
           </h2>
           <div class="card-pf-body">
             <div class="card-pf-utilization-details">
