--- a/dashboard/templates/ci/add_pipeline.html
+++ b/dashboard/templates/ci/add_pipeline.html
@@ -1,20 +1,15 @@
 {% extends "form_base.html" %}
 {% block extrascript %}
-<script src="/static/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
 <script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 {% endblock %}
 {% block formtitle %}
-Add a new translation platform
+Add a new {{ package_name|title }} CI Pipeline
 {% endblock %}
 {% block formreturnurl %}
-{% url 'settings-trans-platforms' %}
+{% url 'package-view' package_name %}
 {% endblock %}
 {% block formscript %}
 <script>
-  $(function () {
-    $(".bootstrap-switch").bootstrapSwitch();
-    $(".bootstrap-switch").parent().css("padding-left", "0px");
-  });
   $(function(){$(".selectpicker").selectpicker({dropupAuto:!1,liveSearch:!0})});
 </script>
 {% endblock %}
