list ci pipelines

--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -123,9 +123,7 @@
   </div>
 </div>
 
-<div>
-  {% include "ci/_ci_pipeline.html" %}
-</div>
+{% tag_ci_pipelines package_name %}
 
 <div class="row">
   <div id="div-branch-mapping" class="col-sm-6">
