--- a/dashboard/templates/packages/_package_details.html
+++ b/dashboard/templates/packages/_package_details.html
@@ -56,7 +56,7 @@
           <li><a href="{% url 'package-add-ci-pipeline' package.package_name %}">
             <span class="pficon pficon-add-circle-o" aria-hidden="true"></span> CI Pipeline</a>
           </li>
-          <!--<li><a href="#"><span class="fa fa-calendar" aria-hidden="true"></span> Schedules</a></li>-->
+          <li><a href="#"><span class="fa fa-calendar" aria-hidden="true"></span> Schedules</a></li>
           <li role="separator" class="divider"></li>
           <li><a href="{% url 'jobs-cleanup' %}">
                 <span class="fa fa-eye-slash" aria-hidden="true"></span> Hide Branches
