initial push pull jobs draft

--- a/dashboard/templates/ci/_ci_pipeline.html
+++ b/dashboard/templates/ci/_ci_pipeline.html
@@ -132,7 +132,7 @@
               </div>
             </div>
           </dl>
-          <!--<p class="ts-pre">{{ pipeline.ci_project_details_json }}</p>-->
+          <p class="ts-pre">{{ pipeline.ci_project_details_json }}</p>
         </div>
       </div>
     </div>
