pulltrans job partial implementation

--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -10,7 +10,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
           <div class="form-group">
             {% if job_templates %}
               {% for template in job_templates %}
-              <div class="col-xs-4">
+              <div class="col-xs-4" style="padding:2%">
                 <div class="thumbnail" style="max-width:400px">
                   <div class="caption" style="min-height:250px">
                     <div class="panel-title">
