extend push job to enable weblate git clone as well

--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -85,6 +85,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                     <option selected disabled>Select Repo Type</option>
                     <option value="default">default</option>
                     <option value="l10n">localization</option>
+                    <option value="weblate">weblate</option>
                 </select>
             </div>
           </div>
