--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -167,16 +167,19 @@
       <td class="table-view-pf-actions">
         <div class="dropdown dropdown-kebab-pf">
           {% if user.is_staff or package.created_by == user.email %}
-          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="true"><span class="fa fa-ellipsis-v"></span></button>
           {% else %}
-          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="true" disabled><span class="fa fa-ellipsis-v"></span></button>
           {% endif %}
-            <span class="fa fa-ellipsis-v"></span>
-          </button>
           <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight">
             <li>
               <a href="{% url 'package-update' package.package_name %}">Edit</a>
             </li>
+            {% if user.is_staff %}
+              <li><a href="{% url 'package-delete' package.package_name %}">Delete</a></li>
+            {% endif %}
           </ul>
         </div>
       </td>
